Support for ResearchBodies v1.9.2

--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTResearchBodies.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTResearchBodies.cfg
@@ -4,26 +4,116 @@ RESEARCHBODIES
 	name = TarsierSpaceTech	
 	ONDISCOVERY
 	{		
-		Twin Clouds = We found a new galaxy that looks like two fluffy clouds.
-		Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
-		The Roundabout = We found a new galaxy that goes around and around!
-		The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
-		The Big Pop = We found a new galaxy that looks like it just popped!
-		The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
-		The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
-		Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
+		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
 	}
 	
 	IGNORELEVELS
 	{
 		// body = easy normal medium hard		
-		Twin Clouds = true false false false
-		Big Plate Galaxy = true false false false
-		The Roundabout = true false false false
-		The Purple Donkey Nebula = true false false false
-		The Big Pop = true false false false
-		The Great Plug Hole = true false false false
-		The Fingerprint Galaxy = true false false false
-		Strawberries and Cream Cloud = true false false false
+		Galaxy1 = true false false false
+		Galaxy2 = true false false false
+		Galaxy3 = true false false false
+		Galaxy4 = true false false false
+		Galaxy5 = true false false false
+		Galaxy6 = true false false false
+		Galaxy7 = true false false false
+		Galaxy8 = true false false false
+	}
+}
+
+Localization
+{
+	en-us
+	{		
+		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
+		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+	}
+}
+
+Localization
+{
+	es-es
+	{	
+		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
+		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+	}
+}
+
+Localization
+{
+	es-mx
+	{	
+		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
+		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+	}
+}
+
+Localization
+{
+	ja
+	{	
+		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
+		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+	}
+}
+
+Localization
+{
+	ru
+	{	
+		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
+		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+	}
+}
+
+Localization
+{
+	zh-cn
+	{	
+		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
+		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
 	}
 }
