--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTResearchBodies.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTResearchBodies.cfg
@@ -5,13 +5,13 @@ RESEARCHBODIES
 	ONDISCOVERY
 	{		
 		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
-		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
-		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
-		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
-		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
-		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
-		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
-		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+		#autoLOC_RBodies_discovery_Galaxy2 = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = We found a new galaxy that looks like, well, a dessert.
 	}
 	
 	IGNORELEVELS
@@ -33,13 +33,13 @@ Localization
 	en-us
 	{		
 		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
-		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
-		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
-		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
-		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
-		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
-		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
-		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+		#autoLOC_RBodies_discovery_Galaxy2 = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = We found a new galaxy that looks like, well, a dessert.
 	}
 }
 
@@ -48,13 +48,13 @@ Localization
 	es-es
 	{	
 		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
-		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
-		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
-		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
-		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
-		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
-		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
-		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+		#autoLOC_RBodies_discovery_Galaxy2 = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = We found a new galaxy that looks like, well, a dessert.
 	}
 }
 
@@ -63,13 +63,13 @@ Localization
 	es-mx
 	{	
 		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
-		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
-		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
-		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
-		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
-		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
-		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
-		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+		#autoLOC_RBodies_discovery_Galaxy2 = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = We found a new galaxy that looks like, well, a dessert.
 	}
 }
 
@@ -78,13 +78,13 @@ Localization
 	ja
 	{	
 		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
-		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
-		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
-		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
-		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
-		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
-		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
-		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+		#autoLOC_RBodies_discovery_Galaxy2 = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = We found a new galaxy that looks like, well, a dessert.
 	}
 }
 
@@ -93,13 +93,13 @@ Localization
 	ru
 	{	
 		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
-		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
-		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
-		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
-		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
-		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
-		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
-		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+		#autoLOC_RBodies_discovery_Galaxy2 = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = We found a new galaxy that looks like, well, a dessert.
 	}
 }
 
@@ -108,12 +108,12 @@ Localization
 	zh-cn
 	{	
 		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
-		#autoLOC_RBodies_discovery_Galaxy2 = Big Plate Galaxy = We found a new galaxy that looks like a big plate or is it a dish?
-		#autoLOC_RBodies_discovery_Galaxy3 = The Roundabout = We found a new galaxy that goes around and around!
-		#autoLOC_RBodies_discovery_Galaxy4 = The Purple Donkey Nebula = We found a new galaxy that looks like a horse.
-		#autoLOC_RBodies_discovery_Galaxy5 = The Big Pop = We found a new galaxy that looks like it just popped!
-		#autoLOC_RBodies_discovery_Galaxy6 = The Great Plug Hole = We found a new galaxy that looks like a giant plughole.
-		#autoLOC_RBodies_discovery_Galaxy7 = The Fingerprint Galaxy = We found a new galaxy that looks amazingly like a fingerprint.
-		#autoLOC_RBodies_discovery_Galaxy8 = Strawberries and Cream Cloud = We found a new galaxy that looks like, well, a dessert.
+		#autoLOC_RBodies_discovery_Galaxy2 = We found a new galaxy that looks like a big plate or is it a dish?
+		#autoLOC_RBodies_discovery_Galaxy3 = We found a new galaxy that goes around and around!
+		#autoLOC_RBodies_discovery_Galaxy4 = We found a new galaxy that looks like a horse.
+		#autoLOC_RBodies_discovery_Galaxy5 = We found a new galaxy that looks like it just popped!
+		#autoLOC_RBodies_discovery_Galaxy6 = We found a new galaxy that looks like a giant plughole.
+		#autoLOC_RBodies_discovery_Galaxy7 = We found a new galaxy that looks amazingly like a fingerprint.
+		#autoLOC_RBodies_discovery_Galaxy8 = We found a new galaxy that looks like, well, a dessert.
 	}
 }
