--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
@@ -2275,7 +2275,7 @@ Localization
 	zh-cn
 	{
 		#autoLOC_TST_0001 = 双胞胎星云
-		#autoLOC_TST_0002 = 大板的星系
+		#autoLOC_TST_0002 = 大板星系
 		#autoLOC_TST_0003 = 螺旋星系
 		#autoLOC_TST_0004 = 紫色驴星云
 		#autoLOC_TST_0005 = 蟹状星云
@@ -2398,36 +2398,36 @@ Localization
 		#autoLOC_TST_0122 = <color=<<1>>>太空望远镜的照片</color>\n
 		#autoLOC_TST_0123 = 我们收集了一具以前不为人知的机构的照片。如果我们把这些数据传回或传送到家里，我们就会对它有更多的了解。
 		#autoLOC_TST_0124 = 太空望远镜拍摄的未知天体图片
-		#autoLOC_TST_0125 = 天然气巨头。它周围的环很漂亮。
-		#autoLOC_TST_0126 = 这颗小卫星很难穿透萨努斯的光环，但它必须负责保持光环的位置。
-		#autoLOC_TST_0127 = 它看起来像一个巨大的鸡蛋。它会是一个未孵化的海怪吗?
+		#autoLOC_TST_0125 = 气态巨行星。它周围的环很漂亮。
+		#autoLOC_TST_0126 = 这颗小卫星很难通过Sarnus的光环看见，但它必须负责保持光环的位置。
+		#autoLOC_TST_0127 = 它看起来像一个巨大的鸡蛋。它会是一个未孵化的海妖吗?
 		#autoLOC_TST_0128 = 它看起来很像Kerbin，但没有大气层，需要更仔细的检查。
-		#autoLOC_TST_0129 = 大气层很厚，表面可能有液体。这里的可能性超乎想象。
-		#autoLOC_TST_0130 = 一个冰巨人。看起来很冷。这些颜色简直令人惊叹。
-		#autoLOC_TST_0131 = 一颗冰冻的月亮，在它的地形上有明显的摆动。
-		#autoLOC_TST_0132 = 一个布满陨石坑的月亮。
+		#autoLOC_TST_0129 = 大气层很厚，表面可能有液体。这种可能性超乎想象。
+		#autoLOC_TST_0130 = 一个巨行星。看起来很冷。这些颜色简直令人惊叹。
+		#autoLOC_TST_0131 = 一颗冰冻的卫星，在它的地形上有明显的摆动。
+		#autoLOC_TST_0132 = 一个布满陨石坑的卫星。
 		#autoLOC_TST_0133 = 岩石表面的金色不禁让你想起…黄金。
-		#autoLOC_TST_0134 = 沃尔的卫星。它也有一个闪亮的，金色的表面
-		#autoLOC_TST_0135 = 另一个冰巨人。极其美丽的蓝色和紫色令人着迷。
-		#autoLOC_TST_0136 = 一种冰状的月球，它的大气层似乎非常稀薄。
-		#autoLOC_TST_0137 = 这个小月亮看起来像一个大理石。
-		#autoLOC_TST_0138 = 它看起来像一个冰冷的小矮人。离这儿很远。
+		#autoLOC_TST_0134 = Wal的卫星。它也有一个闪亮的，金色的表面
+		#autoLOC_TST_0135 = 另一个冰冻巨行星。极其美丽的蓝色和紫色令人着迷。
+		#autoLOC_TST_0136 = 冰冻的卫星，它的大气层似乎非常稀薄。
+		#autoLOC_TST_0137 = 这个小卫星看起来像一个大理石。
+		#autoLOC_TST_0138 = 它看起来像一个冰冷的矮星。离这儿很远。
 		#autoLOC_TST_0139 = 除了岩石什么都没有，令人惊奇的是我们可以把化学摄像机放在地面上对它的成分进行分析。
-		#autoLOC_TST_0140 = 激光分析Ovok表面发现了冰。也许这根本就不是太空巨蛋。
-		#autoLOC_TST_0141 = 持续不断的激光爆炸使石板表面蒸发，显示出许多非常有趣的化合物。要是有空气就好了。
-		#autoLOC_TST_0142 = 激光分析表明氯和碳氢化合物。这是乙烷吗?这能维持生命吗?
-		#autoLOC_TST_0143 = 当表面上的冰在激光的注视下融化时，开始冒烟了。
+		#autoLOC_TST_0140 = 激光分析在Ovok表面发现了冰。也许这根本就不是深空海妖的蛋。
+		#autoLOC_TST_0141 = 持续不断的激光爆炸使石板表面蒸发，显示出许多非常有趣的化合物。要是有大气层就好了。
+		#autoLOC_TST_0142 = 激光分析表明上面有氯和碳氢化合物。这是乙烷吗?这能维持生命吗?
+		#autoLOC_TST_0143 = 当地表上的冰在激光的注视下融化时，地表开始冒烟了。
 		#autoLOC_TST_0144 = 激光产生了它自己的小陨石坑，但是由于已经有这么多的陨石坑，它将不会被注意到。
 		#autoLOC_TST_0145 = 激光分析表明这里没有黄金。
-		#autoLOC_TST_0146 = 激光分析表明冰与…黄金。
+		#autoLOC_TST_0146 = 激光分析表明这里有冰与…黄金。
 		#autoLOC_TST_0147 = 激光的爆炸使冰汽化。大量的冰。
 		#autoLOC_TST_0148 = 激光在这里很难校准。但它似乎是岩石和大理石?
-		#autoLOC_TST_0149 = 我们是怎么来到这里的?分析表明冰。
+		#autoLOC_TST_0149 = 我们是怎么来到这里的?分析表明这里有冰。
 		#autoLOC_TST_0150 = 水星表面布满了各种年龄的陨石坑;通过望远镜可以清楚地看到一些较新的火山口喷出的物质。
 		#autoLOC_TST_0151 = 云层的微弱变化表明该地区存在一些高山或火山。
 		#autoLOC_TST_0152 = 月球大部分明亮的表面覆盖着重叠的陨石坑。
 		#autoLOC_TST_0153 = 火星上似乎有很多红色的东西，需要更仔细的观察。
-		#autoLOC_TST_0154 = 从近处看，这个东西更像是一颗大小行星，而不是月亮。
+		#autoLOC_TST_0154 = 从近处看，这个东西更像是一颗大小行星，而不是卫星。
 		#autoLOC_TST_0155 = 近距离看，火卫一就像一颗巨大的、非常暗的小行星。
 		#autoLOC_TST_0156 = 在木星的大气层中可以看到不同颜色的云带;每条带子都被强风吹向相反的方向。
 		#autoLOC_TST_0157 = 木卫一表面覆盖着五颜六色的黄色、红色，有时还有绿色的物质，有时以活火山为中心。
