--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
@@ -2403,7 +2403,7 @@ Localization
 		#autoLOC_TST_0127 = 它看起来像一个巨大的鸡蛋。它会是一个未孵化的海妖吗?
 		#autoLOC_TST_0128 = 它看起来很像Kerbin，但没有大气层，需要更仔细的检查。
 		#autoLOC_TST_0129 = 大气层很厚，表面可能有液体。这种可能性超乎想象。
-		#autoLOC_TST_0130 = 一个巨行星。看起来很冷。这些颜色简直令人惊叹。
+		#autoLOC_TST_0130 = 一颗冰冻的巨行星。它看起来很冷。这些颜色简直令人惊叹。
 		#autoLOC_TST_0131 = 一颗冰冻的卫星，在它的地形上有明显的摆动。
 		#autoLOC_TST_0132 = 一个布满陨石坑的卫星。
 		#autoLOC_TST_0133 = 岩石表面的金色不禁让你想起…黄金。
