--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
@@ -2427,7 +2427,7 @@ Localization
 		#autoLOC_TST_0151 = 云层的微弱变化表明该地区存在一些高山或火山。
 		#autoLOC_TST_0152 = 月球大部分明亮的表面覆盖着重叠的陨石坑。
 		#autoLOC_TST_0153 = 火星上似乎有很多红色的东西，需要更仔细的观察。
-		#autoLOC_TST_0154 = 从近处看，这个东西更像是一颗大小行星，而不是卫星。
+		#autoLOC_TST_0154 = 从近处看，这个东西更像是一颗巨大的小行星，而不是卫星。
 		#autoLOC_TST_0155 = 近距离看，火卫一就像一颗巨大的、非常暗的小行星。
 		#autoLOC_TST_0156 = 在木星的大气层中可以看到不同颜色的云带;每条带子都被强风吹向相反的方向。
 		#autoLOC_TST_0157 = 木卫一表面覆盖着五颜六色的黄色、红色，有时还有绿色的物质，有时以活火山为中心。
