--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
@@ -2433,12 +2433,12 @@ Localization
 		#autoLOC_TST_0157 = 木卫一表面覆盖着五颜六色的黄色、红色，有时还有绿色的物质，有时以活火山为中心。
 		#autoLOC_TST_0158 = 相对光滑，明亮的白色地形覆盖了木卫二的大部分表面。
 		#autoLOC_TST_0159 = 木卫三的地形在大部分地区都有严重的坑洞，看起来大部分是水冰，被一层薄薄的黑色风化层覆盖。
-		#autoLOC_TST_0160 = 木卫四的表面几乎是饱和的撞击坑,每进一步影响几乎总是重叠与老坑。
+		#autoLOC_TST_0160 = 木卫四的表面几乎全是撞击坑,每一个进一步的撞击几乎都会和老撞击坑重叠。
 		#autoLOC_TST_0161 = 土星厚厚的云层遮住了除最外层外的所有大气层。
 		#autoLOC_TST_0162 = 密集的云层遮住了光谱中大部分可见部分的表面，几乎没有提供有用的数据。
 		#autoLOC_TST_0163 = 天王星的淡蓝色和白色云层覆盖了整个行星，掩盖了对其内部的任何观察。
 		#autoLOC_TST_0164 = 从这个距离看冥王星有点模糊，需要近距离观察才能看到细节。
-		#autoLOC_TST_0165 = 对蒸发表面物质的扫描表明，水星几乎完全被火成岩层所覆盖。
+		#autoLOC_TST_0165 = 对表面蒸发的物质的扫描表明，水星几乎完全被火成岩层所覆盖。
 		#autoLOC_TST_0166 = 激光对金星表面的分析揭示了一种与大多数岩石行星相似的元素组成;主要是硅酸盐。
 		#autoLOC_TST_0167 = 来自激光的持续爆炸使月球表层风化层蒸发，然而在下面除了更多的风化层什么也没有发现。
 		#autoLOC_TST_0168 = 在火星表面检测到大量的氧化铁，而氧化铁的存在是火星呈现红色的原因。
@@ -2453,11 +2453,11 @@ Localization
 		#autoLOC_TST_0177 = 给一个遥远的天体拍了一张伟大的科学照片。
 		#autoLOC_TST_0178 = 谁是那个把泡泡糖放在镜头上的聪明人?
 		#autoLOC_TST_0179 = 燃烧的气味是你的眼角膜。
-		#autoLOC_TST_0180 = 那是我的房子吗?或者镜头上有灰尘。
-		#autoLOC_TST_0181 = 正是我们所需要的，另一张模联的照片。
-		#autoLOC_TST_0182 = 挂在…那里还有另一个月亮?
+		#autoLOC_TST_0180 = 那是我的房子吗?还是镜头上有灰尘。
+		#autoLOC_TST_0181 = 正是我们所需要的，另一张Mun的照片。
+		#autoLOC_TST_0182 = 等下… 那里还有另一颗卫星?
 		#autoLOC_TST_0183 = 那看起来像一块很好的粘土。
-		#autoLOC_TST_0184 = 可惜更多的行星不是紫色的。
+		#autoLOC_TST_0184 = 真可惜, 更多的行星不是紫色的。
 		#autoLOC_TST_0185 = 你想知道你是否能去两极滑雪。
 		#autoLOC_TST_0186 = 看起来没有什么令人兴奋的事情发生。
 		#autoLOC_TST_0187 = 那将是一张可爱的明信片。
@@ -2468,18 +2468,18 @@ Localization
 		#autoLOC_TST_0192 = 它转了一圈又一圈。
 		#autoLOC_TST_0193 = 它是一匹马吗?Eee Awww，不，我想它是头驴。
 		#autoLOC_TST_0194 = 那是个大爆炸!
-		#autoLOC_TST_0195 = 它看起来就像一个巨大的塞孔。
+		#autoLOC_TST_0195 = 它看起来就像一个巨大的塞子孔。
 		#autoLOC_TST_0196 = 这是外星生命的迹象吗?看起来像我的指纹。
 		#autoLOC_TST_0197 = 嗯，草莓和奶油。
-		#autoLOC_TST_0198 = 分光计证实样品确实是元素的组合。
-		#autoLOC_TST_0199 = 光谱仪的数据毫无意义，他们认为用激光照射岩石实际上是个好主意。
+		#autoLOC_TST_0198 = 光谱仪证实样品是几种元素的组合。
+		#autoLOC_TST_0199 = 光谱仪的数据是无稽之谈，它认为用激光照射岩石实际上是个好主意。
 		#autoLOC_TST_0200 = 射击岩石很有趣，让我们再来一次…什么?!这是科学实验吗?
 		#autoLOC_TST_0201 = 光谱显示了大量的水和有机物。你可能刚刚射杀了一只昆虫
-		#autoLOC_TST_0202 = 光谱显示硅、铝和氧的峰值。
-		#autoLOC_TST_0203 = 这里的岩石很无趣，至少风景不错。
+		#autoLOC_TST_0202 = 光谱显示硅、铝和氧含量达到了的峰值。
+		#autoLOC_TST_0203 = 这里的岩石很无趣，但是至少风景不错。
 		#autoLOC_TST_0204 = 硅，很多很多的硅。
-		#autoLOC_TST_0205 = 这里的岩石和景色都很乏味。
-		#autoLOC_TST_0206 = 光谱显示有水存在，但没有其他的。
+		#autoLOC_TST_0205 = 这里的岩石很无聊, 就像和景色一样。
+		#autoLOC_TST_0206 = 光谱显示有水存在, 但没有其他的。
 		#autoLOC_TST_0207 = 硅和水，构成沙堡的成分。
 		#autoLOC_TST_0208 = 这一地区的地质情况绝对不符合其名称。
 		#autoLOC_TST_0209 = 原来管理层不喜欢在发射台上测试激光。
@@ -2498,10 +2498,10 @@ Localization
 		#autoLOC_TST_0222 = Kerbal技术的顶峰，能够窥视到Kerbal系统的最深处。说明不包括在内。
 		#autoLOC_TST_0223 = 眼镜猴tst高级望远镜科学
 		#autoLOC_TST_0224 = 化学摄像机向岩石发射高能激光，并根据火焰的颜色计算出它们是由什么构成的。Kerbal公司的科学家们是在照例焚烧办公家具并注意到家具发出的不同颜色时想到这个主意的。
-		#autoLOC_TST_0225 = 眼镜猴 tst 高级科学 化学分析相机 探测车相机 摄像机
+		#autoLOC_TST_0225 = 眼镜猴太空技术 高级科学 化学分析相机 探测车相机 摄像机
 		#autoLOC_TST_0226 = 科学存储设备(小型)
 		#autoLOC_TST_0227 = 一个小的硬盘驱动器，用于存储科学数据，但不幸的是容易损坏数据。可以使用KIS/KAS在EVA中添加和删除。
-		#autoLOC_TST_0228 = 眼镜猴 tst 高级科学 sdd 硬盘存储
+		#autoLOC_TST_0228 = 眼镜猴太空技术 高级科学 固态硬盘存储
 		#autoLOC_TST_0229 = 科学存储设备(大型)
 		#autoLOC_TST_0230 = 一个更大的硬盘，由4个更小的硬盘连接而成。他们有较少的数据损坏，但它有较高的电力使用。
 		#autoLOC_TST_0231 = 太空望远镜
@@ -2530,7 +2530,7 @@ Localization
 		#autoLOC_TST_0254 = 打开
 		#autoLOC_TST_0255 = 视图
 		#autoLOC_TST_0256 = 存储科学的视图
-		#autoLOC_TST_0257 = 没有关系
+		#autoLOC_TST_0257 = 没有信号连接
 		#autoLOC_TST_0258 = 载具没有远程技术连接或船员
 		#autoLOC_TST_0259 = 探测相机
 		#autoLOC_TST_0260 = 化学分析相机探测部分
