--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
@@ -2478,14 +2478,14 @@ Localization
 		#autoLOC_TST_0202 = 光谱显示硅、铝和氧含量达到了的峰值。
 		#autoLOC_TST_0203 = 这里的岩石很无趣，但是至少风景不错。
 		#autoLOC_TST_0204 = 硅，很多很多的硅。
-		#autoLOC_TST_0205 = 这里的岩石很无聊, 就像和景色一样。
+		#autoLOC_TST_0205 = 这里的岩石很无聊, 就像景色一样。
 		#autoLOC_TST_0206 = 光谱显示有水存在, 但没有其他的。
 		#autoLOC_TST_0207 = 硅和水，构成沙堡的成分。
 		#autoLOC_TST_0208 = 这一地区的地质情况绝对不符合其名称。
 		#autoLOC_TST_0209 = 原来管理层不喜欢在发射台上测试激光。
 		#autoLOC_TST_0210 = 你注意到附近的燃料泄漏，这可能是一个伟大的实验。
 		#autoLOC_TST_0211 = 实验表明，用激光射击科学家很有趣。
-		#autoLOC_TST_0212 = 其组成与Kerbin惊人的相似。
+		#autoLOC_TST_0212 = 其组成与Kerbin有着惊人的相似。
 		#autoLOC_TST_0213 = 光谱非常接近玄武岩的光谱。
 		#autoLOC_TST_0214 = 光谱看起来相当混乱，这似乎是许多不同岩石类型的混合物。
 		#autoLOC_TST_0215 = 这里的岩石富含贵金属。
@@ -2496,7 +2496,7 @@ Localization
 		#autoLOC_TST_0220 = 太空科学设备领域的专家，眼镜猴太空技术正在建造一些最先进的组件，但随之而来的是高昂的价格。
 		#autoLOC_TST_0221 = 深空太空望远镜
 		#autoLOC_TST_0222 = Kerbal技术的顶峰，能够窥视到Kerbal系统的最深处。说明不包括在内。
-		#autoLOC_TST_0223 = 眼镜猴tst高级望远镜科学
+		#autoLOC_TST_0223 = 眼镜猴太空技术高级望远镜科学
 		#autoLOC_TST_0224 = 化学摄像机向岩石发射高能激光，并根据火焰的颜色计算出它们是由什么构成的。Kerbal公司的科学家们是在照例焚烧办公家具并注意到家具发出的不同颜色时想到这个主意的。
 		#autoLOC_TST_0225 = 眼镜猴太空技术 高级科学 化学分析相机 探测车相机 摄像机
 		#autoLOC_TST_0226 = 科学存储设备(小型)
