Updating for KSP 1.10.x

--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Localization.cfg
@@ -2040,20 +2040,20 @@ Localization
 		#autoLOC_TST_0048 = Нет местности для анализа в данном диапазоне
 		#autoLOC_TST_0049 = Фотография сохранена
 		#autoLOC_TST_0050 = Проверить результаты
-		#autoLOC_TST_0051 = Если вы отправите данные, они будут стоить только: <<1>>% от полной научной ценности
+		#autoLOC_TST_0051 = Если вы отправите данные, они будут стоить только <<1>>% от полной научной ценности
 		#autoLOC_TST_0052 = Исследование
 		#autoLOC_TST_0053 = ChemCam
 		#autoLOC_TST_0054 = Анализ состава поверхности <<1>>
-		#autoLOC_TST_0055 = Данные сохранены, пожалуйста отправьте для анализа
+		#autoLOC_TST_0055 = Данные сохранены, пожалуйста отправьте их для анализа
 		#autoLOC_TST_0056 = Используйте ChemCam для анализа состава поверхности <<1>> на <<2>>
 		#autoLOC_TST_0057 = Используйте ChemCam для анализа поверхности <<1>>
 		#autoLOC_TST_0058 = Космический телескоп
 		#autoLOC_TST_0059 = Сфотографируйте <<1>>
 		#autoLOC_TST_0060 = Хорошая фотография
 		#autoLOC_TST_0061 = Используйте космический телескоп, чтобы сфотографировать<<1>>
-		#autoLOC_TST_0062 = Сфотографируйте <<1>> используя космический телескоп
+		#autoLOC_TST_0062 = Сфотографируйте <<1>>, используя космический телескоп
 		#autoLOC_TST_0063 = Research Bodies
-		#autoLOC_TST_0064 = Открыто новая планета: <<1>>
+		#autoLOC_TST_0064 = Открыта новая планета: <<1>>
 		#autoLOC_TST_0065 = Закрыть
 		#autoLOC_TST_0066 = Вместимость
 		#autoLOC_TST_0067 = \u0020Mits
@@ -2064,8 +2064,8 @@ Localization
 		#autoLOC_TST_0072 = Недостаточно ёмкости для хранения данных
 		#autoLOC_TST_0073 = Переместить эксперименты на диск
 		#autoLOC_TST_0074 = Перемещено <<1>> на диск TST
-		#autoLOC_TST_0075 = Необходимое кол-во: <<1>> электрического заряда недоступно для хранения данных
-		#autoLOC_TST_0076 = Недостаточно ёмкости для хранения данных
+		#autoLOC_TST_0075 = Необходимо <<1>> единиц электроэнергии для хранения данных
+		#autoLOC_TST_0076 = Недостаточно места для хранения данных
 		#autoLOC_TST_0077 = Пересмотреть данные
 		#autoLOC_TST_0078 = Вместимость: <<1>>Mits\n
 		#autoLOC_TST_0079 = Никаких устройств связи на этом крафте. Нельзя передать данные.
@@ -2106,7 +2106,7 @@ Localization
 		#autoLOC_TST_0114 = Показать интерфейс
 		#autoLOC_TST_0115 = Не удается найти эксперимент - внутренняя ошибка. Смотрите логи.
 		#autoLOC_TST_0116 = Космический телесоп: фотография <<1>>
-		#autoLOC_TST_0117 = Космический телескоп Tarsier: на орбите <<1>> наблюдает за <<2>>
+		#autoLOC_TST_0117 = Космический телескоп Tarsier наблюдает за <<2>> на орбите <<1>>
 		#autoLOC_TST_0118 = Неизвестное небесное тело
 		#autoLOC_TST_0119 = Нельзя сфотографировать, пока <<1>>
 		#autoLOC_TST_0120 = <color=<<1>>>Космический телескоп</color>\nМожет фотографировать небесные тела в небе.\n
