--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTResearchBodies.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/TSTResearchBodies.cfg
@@ -92,14 +92,14 @@ Localization
 {
 	ru
 	{	
-		#autoLOC_RBodies_discovery_Galaxy1 = We found a new galaxy that looks like two fluffy clouds.
-		#autoLOC_RBodies_discovery_Galaxy2 = We found a new galaxy that looks like a big plate or is it a dish?
-		#autoLOC_RBodies_discovery_Galaxy3 = We found a new galaxy that goes around and around!
-		#autoLOC_RBodies_discovery_Galaxy4 = We found a new galaxy that looks like a horse.
-		#autoLOC_RBodies_discovery_Galaxy5 = We found a new galaxy that looks like it just popped!
-		#autoLOC_RBodies_discovery_Galaxy6 = We found a new galaxy that looks like a giant plughole.
-		#autoLOC_RBodies_discovery_Galaxy7 = We found a new galaxy that looks amazingly like a fingerprint.
-		#autoLOC_RBodies_discovery_Galaxy8 = We found a new galaxy that looks like, well, a dessert.
+		#autoLOC_RBodies_discovery_Galaxy1 = Мы нашли новую галактику, похожую на два пушистых облака.
+		#autoLOC_RBodies_discovery_Galaxy2 = Мы нашли новую галактику, которая выглядит, как большая тарелка... или это блюдо?
+		#autoLOC_RBodies_discovery_Galaxy3 = Мы нашли новую галактику, которая ходит вокруг да около!
+		#autoLOC_RBodies_discovery_Galaxy4 = Мы нашли новую галактику, похожую на лошадь.
+		#autoLOC_RBodies_discovery_Galaxy5 = Мы нашли новую галактику, которая выглядит так, как будто она только что взорвалась!
+		#autoLOC_RBodies_discovery_Galaxy6 = Мы нашли новую галактику, похожую на гигантскую пробку.
+		#autoLOC_RBodies_discovery_Galaxy7 = Мы нашли новую галактику, которая удивительно похожа на отпечаток пальца.
+		#autoLOC_RBodies_discovery_Galaxy8 = Мы нашли новую галактику, которая выглядит как десерт.
 	}
 }
 
