Update for KSP 1.11.x

--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ChemCam/part.cfg
@@ -45,4 +45,11 @@ MODULE
 	name = FlagDecal	
     textureQuadName = flag
 }
+
+MODULE
+{
+	name = ModuleCargoPart
+	stackableQuantity = 1
+	packedVolume = 2
+}
 }
