--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDrive/part.cfg
@@ -40,4 +40,11 @@ MODULE
 	fillFromEVA = true
 	EVARange = 1.2
 }
+
+MODULE
+{
+	name = ModuleCargoPart
+	stackableQuantity = 4
+	packedVolume = 5
+}
 }
