--- a/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDriveLarge/part.cfg
+++ b/TarsierSpaceTechnology/TarsierSpaceTech/Distribution/GameData/TarsierSpaceTech/Parts/ScienceHardDriveLarge/part.cfg
@@ -44,4 +44,10 @@ MODULE
 	fillFromEVA = true
 	EVARange = 1.2
 }
+MODULE
+{
+	name = ModuleCargoPart
+	stackableQuantity = 1
+	packedVolume = 300
+}
 }
